style(post-entry): fix content gap variable for home info section

--- a/assets/css/common/post-entry.css
+++ b/assets/css/common/post-entry.css
@@ -34,6 +34,7 @@
 }
 
 .home-info .entry-content {
+    --content-gap: 0.5rem;
     -webkit-line-clamp: unset;
     margin: 0;
 }
